# soft-canonicalize-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SOFT_CANONICALIZE_BUG_REPORT.md  ci-local.ps1  ci-local.sh  test_consolidation_summary.md  test_coverage_audit.md
.github/chatmodes/: Beast Mode 3.1.chatmode.md  Extensive Mode.chatmode.md
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: PERFORMANCE.md  README.md  algorithm_optimizations.rs  performance_comparison.rs  precision_benchmark.rs  throughput_analysis.rs
benches/docs/: accurate_performance_analysis.md  corrected_performance_analysis.md  corrected_throughput_analysis.md  direct_throughput_answer.md  final_performance_analysis.md  performance_analysis_deep_dive.md  performance_verification_august_2025.md  rust_optimization_analysis.md
benches/python/: python_fair_comparison.py
benches/verification/: optimization_test.rs  verify_optimization.rs
docs/: SECURITY.md  dunce_msdn_analysis.md  junction_crate_analysis.md  junction_implementation_summary.md  windows_unc_research.md
examples/: anchored_canonicalize.rs  basic_usage.rs  false_positive_demo.rs  security_demo.rs  symlink_analysis.rs  test_empty_path.rs  value_demonstration.rs  virtual_filesystem_demo.rs
src/: anchored.rs  error.rs  lib.rs  normalize.rs  prefix.rs  symlink.rs  windows.rs
src/tests/: anchored_canonicalize.rs  anchored_relative_symlink_clamping.rs  anchored_symlink_clamping.rs  api_compatibility.rs  basic_functionality.rs  cve_2024_2025_security.rs  cve_tests.rs  cve_traversal_attacks.rs  cve_windows_attacks.rs  dunce_feature.rs  edge_case_robustness.rs  edge_cases.rs  exotic_cross_platform.rs  exotic_edge_cases.rs  exotic_windows.rs  format_verification.rs  optimization.rs  path_traversal.rs  platform_linux_and_anchored.rs  platform_specific.rs  platform_windows.rs  python_inspired_tests.rs  python_lessons.rs  security.rs  security_audit.rs  security_hardening.rs  short_filename_detection.rs  std_behavior.rs  symlink_depth.rs  symlink_dotdot_resolution_order.rs  symlink_dotdot_symlink_first.rs  test_utils.rs  windows_path_stripping.rs
src/tests/anchored_security/: boundary.rs  dotdot.rs  mod.rs  race.rs  symlink.rs  unc.rs  unicode.rs  windows.rs  windows_symlink.rs
src/tests/security_audit/: boundary.rs  dotdot.rs  jail_escape.rs  memory.rs  misc.rs  mod.rs  platform.rs  race.rs  short_filename_bypass.rs  symlink.rs  unc.rs  unicode.rs  unix.rs  windows.rs
tests/: ads_advanced_exploits.rs  ads_comprehensive_security.rs  ads_cross_platform_security.rs  ads_performance_exploits.rs  ads_race_conditions.rs  ads_security_verification.rs  anchored_absolute_symlink_dotdot_escape.rs  anchored_blackbox_security.rs  archive_ads_exploits.rs  blackbox_complex_attacks.rs  blackbox_edge_case_fuzzing.rs  blackbox_performance_regression.rs  blackbox_security.rs  blackbox_security_inputs.rs  blackbox_security_symlinks.rs  blackbox_toctou_attacks.rs  blackbox_unc_attacks.rs  blackbox_unc_corner_cases.rs  blackbox_unc_extras.rs  compat_dotdot.rs  compat_existing_paths.rs  compat_symlinks.rs  cross_platform_paths.rs  crypto_ads_bypass.rs  encoding_penetration.rs  exotic_filesystem_fallback.rs  feature_combinations.rs  feature_combinations_core.rs  feature_combinations_platform.rs  filesystem_boundary_attacks.rs  filesystem_metadata_attacks.rs  issue_53_symlink_dotdot_lexical_collapse.rs  kernel_boundary_ads.rs  linux_proc_indirect_symlink.rs  linux_proc_pid_root.rs  macos_nfd_normalization.rs  macos_private_symlinks.rs  macos_resource_forks_firmlinks.rs  macos_security.rs  macos_volumes_anchored_edge.rs  (+30 more)
tests/test_helpers/: mod.rs  symlink_or_junction.rs
