[package]
name = "soft-canonicalize"
version = "0.4.2"
edition = "2021"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Path canonicalization that works with non-existing paths."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/soft-canonicalize-rs"
homepage = "https://github.com/DK26/soft-canonicalize-rs"
documentation = "https://docs.rs/soft-canonicalize"
keywords = ["path", "canonicalize", "filesystem", "realpath", "symlink"]
categories = ["filesystem", "os", "development-tools"]
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
# Optional dunce dependency for path simplification (Windows-only)
[target.'cfg(windows)'.dependencies]
dunce = { version = "1.0", optional = true }

[dev-dependencies]
# MSRV guard: tempfile >=3.22 pulls windows-sys 0.61+ requiring rustc >=1.71.
# 3.21 is the last known version that builds cleanly on Rust 1.70.0.
tempfile = "=3.21" # Do not update

[features]
default = []
# Opt-in API exposing anchored_canonicalize() function. No extra deps. Disabled by default to reduce binary size.
anchored = []
# Opt-in dunce behavior (Windows-only): simplify Windows UNC paths (\\?\C:\foo) to legacy format (C:\foo) when safe.
# This enables compatibility with legacy programs while maintaining non-existing path support.
# On non-Windows platforms, this feature has no effect and adds no dependencies.
# Adds dunce crate as dependency on Windows only.
dunce = ["dep:dunce"]

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "anchored_canonicalize"
required-features = ["anchored"]

[[example]]
name = "security_demo"
required-features = ["anchored"]

[[example]]
name = "virtual_filesystem_demo"
required-features = ["anchored"]

[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "throughput_analysis"
harness = false

[[bench]]
name = "precision_benchmark"
harness = false
